# Rede-social

./: TODO.md  db.sqlite3  pyproject.toml
src/api/: aplication.py  configuracao.py
src/api/authentication/: auth.py
src/api/dtos/: users.py
src/api/exception/: user.py
src/api/routes/: home.py  users.py
src/datalayer/models/: user.py
